# SentryBoot

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
sentryboot/: __init__.py
sentryboot/authentication/: __init__.py  auth.py  dashboard.py
sentryboot/cli/: __init__.py  commands.py
sentryboot/config/: __init__.py  manager.py
sentryboot/emailer/: __init__.py  client.py
sentryboot/logging/: __init__.py  logger.py
sentryboot/notifications/: __init__.py  formatter.py
sentryboot/utils/: __init__.py  caching.py  camera.py  forensics.py  system_info.py  win_handlers.py
tests/: __init__.py  test_auth.py
